--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<h1>{{ title }}</h1>
+<!-- <h1>{{ title }}</h1>
+<hr> -->
 
-<hr>
-
-<app-counter></app-counter>
+<!-- <app-counter></app-counter>
 <app-heroes-hero></app-heroes-hero>
-<!-- <hr> -->
-<app-heroes-list></app-heroes-list>
+<hr>
+<app-heroes-list></app-heroes-list> -->
+<app-dbz-main-page></app-dbz-main-page>
